# ETAAMB

./: .gitignore  Dockerfile  README.md  docker-compose.yml  install-packages.sh
agent/: Dockerfile  README.md  install-packages.sh  run
agent/management/: manager.php  preCalc.php
agent/moniteur_import/: Autocorrect.pm  Page.pm  getRaws.pl  parseRaws.pl  recupId.pl
etaamb/: .htaccess  907-mlai.php  config.default.php  config.dev.php  config.docker.php  index.php  mail.php
etaamb/classes/: anoner.class.php  anonymiser.class.php  collection.class.php  connector.class.php  day.class.php  default_page.class.php  dict.class.php  docdisplay.class.php  highlighter.class.php  index.class.php  lang.class.php  month.class.php  monthcal.class.php  multi.class.php  my_error.class.php  normalize.class.php  numac.class.php  observer.class.php  page_factory.class.php  parser.class.php  policy.class.php  referer.class.php  router.class.php  rss.class.php  statistics.class.php  tagger.class.php  text_renderer.class.php  title.class.php  url.class.php  year.class.php
etaamb/css/: debug.css  fontello.css  large.css  print.css  smphone.css  style.css  textdisplay.css
etaamb/js/: jquery-eucookielaw.js  onload.js
etaamb/page_parts/: accessibility-policy.html  cookie-policy.html  footer.php  header.php  lang_select.php  menu.php  presentation.php  privacy-policy.html  (+3 more)
py_agent/: Dockerfile  agent  install-packages.sh  pyproject.toml
py_agent/classes/: db.py  mb.py
py_agent/debug/: commands.py
py_agent/scrape/: commands.py
resources/: db.sql  reset_data.sql  updates.sql
(+8 files in other folders)
